pxc/tests/test_003_interface/interf_constr2.px
import common -;

public namespace interf_constr2;

interface ifoo {
  public function void m1() const;
}

struct foo < ifoo > {
  public function void m1() const {
    println("m1");
  }
}

function void test2(ptr{ifoo} x)
{
  x->m1();
}

struct bar {
  public ptr{ifoo} fp;
}

function void test1()
{
  bar b; // error: not default-constructible
  // ptr{ifoo} f = foo();
  test2(b.fp);
}

test1();
